<resources>
    <string name="app_name">SureHelp</string>
    <string name="create">create</string>
    <string name="account">Account</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_username">enter_username</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="next_btn">Next</string>
    <string name="login">login</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="code">Co\nde</string>
    <string name="verification">verification</string>
    <string name="otp_verification_text">Enter One Time Password send on +91252525252</string>
    <string name="verify_code">verify code</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="new_credentials">New \nCredentials</string>
    <string name="password_updated">Password \nUpdated</string>
    <string name="pensionText">
    <p>The <b>Employees\' Provident Fund Organisation (EPFO)</b> administers the system, which assures that employees receive a pension after they reach the age of 58. The scheme\'s benefits are available to both existing and new EPF members. Both the employee and the employer contribute 12% of the employee\'s basic salary and Dearness Allowance (DA) to the EPF. While the employee\'s entire part goes to EPF, the employer\'s contribution goes to EPS at a rate of 8.33 percent. After the employee retires, the plan provides a steady stream of income.
    </p>\n
        <p><b> The eligibility criteria to avail the EPS benefits are mentioned below:</b>\n
            <ul>
                <li> You must be a member of the EPFO.</li>\n
                <li> You must have attained the age of 50 years for early pension and 58 years for regular pension.</li>\n
                <li> In case you defer the pension for 2 years (until you reach the age of 60 years), you will be eligible to receive the pension at an additional rate of 4% per year.</li>\n
                <li> You must have completed at least 10 years of service.</li>\n
            </ul>
        </p>
    </string>
    <string name="RVYText">
        <b>Rashtriya Vayoshri Yojana</b> is scheme for providing Physical Aids and Assisted-living Devices for Senior citizens belonging to BPL category. This is a Central Sector Scheme, fully funded by the Central Government. The expenditure for implementation of the scheme is being met from the "Senior Citizens\' Welfare Fund". The Scheme is being implemented by the Artificial Limbs Manufacturing Corporation (ALIMCO), a PSU under the Ministry of Social Justice and Empowerment.
        \n<b>Devices supported:</b>\n
        <ul>
            <li>Walking sticks</li>\n
            <li>Elbow crutches</li>\n
            <li>Walkers / Crutches</li>\n
            <li>Tripods / Quadpods</li>\n
            <li>Hearing Aids</li>\n
            <li>Wheelchair</li>\n
            <li>Artificial Dentures</li>\n
        </ul>
        \n
        <b>Documents Required:</b>\n
        <ul>
            <li>Aadhaar /Proof of identity - Passport, Voter ID, Driving license</li>\n
            <li>Proof of BPL status - certificate from the District Authority for eligibility / BPL ration card / proof of receiving Old Age Pension under Indira Gandhi National Old Age Pension Scheme (IGNOAPS) under the National Social Assistance Programme (NSAP) / Any other Pension Scheme of the State/UT Government for Senior citizens belonging to BPL category</li>\n
            <li>Certificate from the Medical Officer required for loss of vision, hearing impairment, loss of teeth and locomotor disability requiring use of wheelchair.
</li>\n
        </ul>

    </string>
    <string name="PMVVYText">
        <b>\'Pradhan Mantri Vaya Vandana Yojana\' </b>(PMvvy) is under administrative control of Ministry of Finance. The scheme aims to protect elderly persons aged 60 years and
above against a future fall in their interest income due to the uncertain market condition, as also to provide social security during old age. The scheme is being implemented
through Life Insurance Corporation (Lic) of India. The scheme provides an assured return of 8% per annum payable monthly for 10 years. The differential return, i.e., the
difference between return generated by LIC and the assured return of 8%per annum would be borne by Government of India as subsidy on annual basis.
        \n
        <b>The eligibilty criteria is:</b>\n
        <ul>
            <li>There are no specific eligibility criteria as such for PMVVY scheme except that the subscriber must be a senior citizen, i.e.  (60 years and above).</li>\n
            <li>The applicant must be an Indian citizen.</li>\n
            <li>There is no maximum entry age for the PMVVY scheme.</li>\n
            <li>The applicant must be ready to avail of the policy term of ten years.</li>\n
        </ul>\n
        <b>Application Process</b>\n
        <ul>
            <li>Log onto the official website of LIC https://licindia.in/</li>\n
            <li>Click on the ‘Buy Online Policies’ option and click on the ‘Click here’ button by scrolling down the page.</li>\n
            <li>Click on the ‘Pradhan Manti Vaya Vandana Yojana’ option under the ‘Buy Policy Online’ heading.</li>\n
            <li>A new page will open. Click on the ‘Click to Buy Online’ option.</li>\n
            <li>Enter the contact details and click on the ‘Proceed’ button.</li>\n
            <li>Fill out the application form.</li>\n
            <li>Submit the online application, upload the documents as requested and click on the ‘Submit’ button to complete the registration.</li>\n

        </ul>


    </string>
    <string name="annapurnaText">
        Annapurna Scheme was launched in the year 2000 with effect from 1st April by the Ministry of Rural Development. It is a Central Sector Scheme. It is one of the sub-scheme of the National Assistance Program. The main aim of this scheme is to fulfil the requirement of senior citizens by providing food security.\n\n

Senior citizens above the age of 65 are eligible for old-age pension under the National Old Age Pension Scheme (NOAPS). Citizens who are eligible for the National Old Age Pension will be given 10 kg of food grains free of cost every month.\n
        <b>Eligibility:</b>\n
        <ul>
            <li>The applicant should not be less than 65 years of age.</li>\n
            <li>The applicant should have no regular means of subsistence from his own source of income or other sources.</li>\n
            <li>Applicants must not be a pensioner under the National Old Age Pension Scheme or State Pension Scheme.</li>\n


        </ul>
        \n
        <b>Implementation:</b>\n
        <ul>
            <li>Gram Panchayats broadly publish the scheme and are responsible for spreading information regarding the procedure for securing benefits under the Scheme.</li>\n
            <li>Beneficiaries are selected by Gram Sabhas.</li>\n
            <li>Selected list of beneficiaries will be provided by Gram Panchayat.</li>\n
            <li>Municipality in that area will be responsible for implementing this scheme.</li>\n
            <li>For identification of the beneficiaries, the state government would communicate the targets for "Annapurna" to the Municipalities or Panchayats.</li>\n
            <li>State governments will inform the Ministry of Rural Development to make arrangements for lifting food grains from the Food Corporation of India.</li>\n
            <li>The District Collector and the Zila Panchayats will allocate the quantitative entitlements.</li>\n


        </ul>


    </string>
    <string name="concessionText">
        Indian Railways have taken various measures for Welfare of senior citizens, some of which are under:\n
        <ol>
            <li>As per rules, male Senior Citizens of minimum 60 years and lady Senior Citizens of
minimum 58 years are granted concession in the fares of all classes of
Mail/Express/Rajdhani/Shatabdi/Jan Shatabdi/Duronto group of trains. The
element of concession is 40% for men and 50% for women.
</li>\n
            <li>In the computerised Passenger Reservation System (PRS), there is a provision to
allot lower berths to Senior Citizens, Female passengers of 45 years and above
automatically, even if no choice is given, subject to availability of accommodation at
the time of booking</li>\n
            <li>In all trains having reserved sleeping accommodation, a combined quota of six
(6) lower berths per coach in Sleeper class and three (3) lower berths per coach
each in AC 3 tier and AC 2 tier classes has been earmarked for Senior Citizens,
Female passengers of 45 years of age above and pregnant women. In case of
Rajdhani, Duronto and fully Air Conditioned/Express trains, the number of berths to
be earmarked under this quota in 3 ACis 4 (four) lower berths per coach as against
3 (three) lower berths per coach in normal Mail/Express trains.</li>\n
            <li>Accommodation is also earmarked for Senior Citizens during specified hours
onsuburban sections by Central and Western Railways.</li>\n
            <li>Instructions exist for provision of wheel chairs at stations. This facility is
provided, duly escorted by coolies (on payment) as per present practice. Moreover,
Zonal Railways have also been advised to provide free of cost \'Battery Operated
Vehicles for Disabled and Old Aged passengers\' at Railway Stations. In addition,
passenger can book e-wheel chairs online through IRCTCportalwww.irctc.co.in.</li>\n
            <li>To help old and disabled passengers requiring assistance at the stations and to
strengthen the existing services, \'Yatri Mitra Sewa\'is being provided through
IRCTC at major stations for enabling passengers to book wheelchair services cum
porter services etc.</li>\n
            <li>After departure of the train, if there are vacant lower berths available in the train
and if any physically person with disability booked on the authority of handicapped
concession or a senior citizen or a pregnant woman, who has been allotted
upper/middle berth, approaches for allotment of vacant lower berths, the on-board
Ticket Checking Staff has been authorised to allot the vacant lower berth to them
making necessary entries in the chart.
</li>\n
            <li>Separate counters are earmarked at various Passengers Reservation System (PRS)
centres for dealing with the reservation requisitions received from Physically
persons with disability, Senior Citizens, ex-MPS, MLAs accredited journalists and
freedom fighters, if the average demand per shift not less than 120 tickets. In case
there is no justification for earmarking of an exclusive counter for any of these
categories of persons including persons with disability or senior citizens, one or two
counters depending upon the total demand are earmarked for dealing with the
reservation requests for all these categories of persons.
</li>\n
        </ol>

    </string>
</resources>